# spooky

./: Makefile  README.md  app-static.js  app.js  index-static.html  index.html  issue-schema.json  pyproject.toml  sample-issue.json  server.py  stories.js  styles.css  uuid-issue.json  uuid-story.json
